[package]
name = "sdiff"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.117.0"
find_folder = "0.3.0"
clap = "2.33.3"
anyhow = "1.0"
image = "0.23.12"
